<resources>
    <string name="app_name">TV_Kids</string>
    <string name="txt_no_text">Không có</string>
    <string name="txt_waiting">Waiting&#8230;</string>
    <string name="txt_warning_plz_input_username">Please input username</string>
    <string name="txt_warning_plz_input_password">Please input password</string>
    <string name="txt_warning_plz_input_new_password">Please enter a new password</string>
    <string name="txt_warning_plz_input_old_password">Please enter a old password</string>
    <string name="txt_warning_plz_input_confirm_password">Please enter a confirm password</string>
    <string name="err_network_available">Vui lòng kiểm tra kết nối mạng</string>
    <string name="err_unexpected_exception">Please try again!</string>
    <string name="txt_ok">OK</string>
    <string name="txt_yes">Yes</string>
    <string name="txt_no">No</string>
    <string name="server_client_id">816939761504-gsdi85spf56ulpk7t8m811i4bumpcii7.apps.googleusercontent.com</string>
    <string name="username">Username</string>
    <string name="title">Title</string>
    <string name="home">Home</string>
    <string name="logout">Log out</string>
    <string name="txt_are_you_sure_logout">Are you sure logout?</string>
    <string name="_5_mins">5 mins</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="bookmark">Bookmark</string>
    <string name="community">Community</string>
    <string name="video_component_tag">video_container</string>
    <string name="write_a_comment">Write a comment...</string>
</resources>
