<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fresco="http://schemas.android.com/tools"
    xmlns:round_image="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutRoot"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/card_corner_10"
    android:background="#fff">

    <quanth.vn.com.tv_kids.views.RoundedConnerImageView
        android:id="@+id/imgAvatar"
        android:layout_width="@dimen/height_avatar_50"
        android:layout_height="@dimen/height_avatar_50"
        android:layout_marginStart="@dimen/card_corner_10"
        android:layout_marginTop="@dimen/card_corner_10"
        android:background="@drawable/bg_avatar"
        android:contentDescription="@null"
        android:scaleType="centerCrop"
        android:src="@drawable/demo1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        round_image:corner_radius="100dp" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/card_corner_10"
        android:text="@string/app_name"
        android:textColor="#000"
        android:textSize="@dimen/text_large_17"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imgAvatar"
        app:layout_constraintTop_toTopOf="@id/imgAvatar" />

    <TextView
        android:id="@+id/tvCreatedAt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_5_mins"
        android:textSize="@dimen/text_small_13"
        app:layout_constraintStart_toStartOf="@id/tvName"
        app:layout_constraintTop_toBottomOf="@id/tvName" />

    <TextView
        android:id="@+id/tvCaption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/card_corner_10"
        android:layout_marginTop="@dimen/card_corner_10"
        android:text="@string/app_name"
        android:textColor="#000"
        android:textSize="@dimen/text_large_17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgAvatar" />

    <RelativeLayout
        android:id="@+id/youtube_view1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/card_corner_10"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCaption">

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            fresco:placeholderImage="@color/colorPrimary" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#4f000000" />

        <ImageView
            android:id="@+id/play_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:contentDescription="@null"
            android:src="@mipmap/ic_video_play" />

        <FrameLayout
            android:id="@+id/video_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:tag="@string/video_component_tag" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/imgTotalLike"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginTop="@dimen/card_corner_10"
        android:contentDescription="@null"
        android:src="@drawable/ic_like_total"
        app:layout_constraintStart_toStartOf="@id/tvCaption"
        app:layout_constraintTop_toBottomOf="@id/youtube_view1" />

    <View
        android:id="@+id/devider"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginStart="@dimen/card_corner_10"
        android:layout_marginTop="@dimen/card_corner_10"
        android:layout_marginEnd="@dimen/card_corner_10"
        android:background="#e1e1e1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgTotalLike" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/layoutLike"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="@drawable/bg_menu_item"
        app:layout_constraintEnd_toStartOf="@id/layoutComment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/devider">

        <ImageView
            android:id="@+id/imgLike"
            android:layout_width="@dimen/text_large_20"
            android:layout_height="@dimen/text_large_20"
            android:layout_marginEnd="3dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_like"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guiline1"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.constraint.Guideline
            android:id="@+id/guiline1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/tvLike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:text="@string/like"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_small_13"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/guiline1"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/layoutComment"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="@drawable/bg_menu_item"
        app:layout_constraintEnd_toStartOf="@id/layoutBookmark"
        app:layout_constraintStart_toEndOf="@id/layoutLike"
        app:layout_constraintTop_toBottomOf="@id/devider">

        <ImageView
            android:id="@+id/imgComment"
            android:layout_width="@dimen/text_large_20"
            android:layout_height="@dimen/text_large_20"
            android:layout_marginEnd="3dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_chat"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guiline2"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.constraint.Guideline
            android:id="@+id/guiline2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.25" />

        <TextView
            android:id="@+id/tvComment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:text="@string/comment"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_small_13"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/guiline2"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/layoutBookmark"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="@drawable/bg_menu_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/layoutComment"
        app:layout_constraintTop_toBottomOf="@id/devider">

        <ImageView
            android:id="@+id/imgBookmark"
            android:layout_width="@dimen/text_large_20"
            android:layout_height="@dimen/text_large_20"
            android:contentDescription="@null"
            android:src="@drawable/ic_bookmark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guiline3"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.constraint.Guideline
            android:id="@+id/guiline3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.3" />

        <TextView
            android:id="@+id/tvBookmark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:text="@string/bookmark"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_small_13"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/guiline3"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>